<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.giamgiammi.StructuredFileViewer</groupId>
    <artifactId>structured-file-viewer</artifactId>
    <version>1.0.3</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <lombok.vesion>1.18.42</lombok.vesion>
        <apache-common.csv.version>1.14.1</apache-common.csv.version>
        <jackson.version>3.0.0</jackson.version>
        <logback.version>1.5.27</logback.version>
        <antlr.version>4.13.2</antlr.version>
        <junit.version>5.9.1</junit.version>

        <jlink.compress>2</jlink.compress>
    </properties>
    <dependencies>
<!--        <dependency>-->
<!--            <groupId>org.openjfx</groupId>-->
<!--            <artifactId>javafx-controls</artifactId>-->
<!--            <version>25</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>org.openjfx</groupId>-->
<!--            <artifactId>javafx-fxml</artifactId>-->
<!--            <version>25</version>-->
<!--        </dependency>-->
        <!-- Source: https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.vesion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>${apache-common.csv.version}</version>
        </dependency>
        <dependency>
            <groupId>tools.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${antlr.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>${maven.compiler.target}</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.vesion}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.6</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>com.github.giamgiammi.StructuredFileViewer.App</mainClass>
                            <launcher>StructuredFileViewer</launcher>
                            <compress>${jlink.compress}</compress>
                            <options>--enable-native-access=javafx.graphics</options>
                            <modulePaths>
                                <modulePath>${project.build.directory}/modules</modulePath>
                            </modulePaths>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>com.github.giamgiammi.StructuredFileViewer.App</mainClass>
                        </transformer>
                    </transformers>
                    <shadedArtifactAttached>true</shadedArtifactAttached>
                    <shadedClassifierName>launcher</shadedClassifierName>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.7.1</version>
                <executions>
                    <execution>
                        <id>download-licenses</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>download-licenses</goal>
                        </goals>
                        <configuration>
                            <licensesOutputDirectory>target/legal</licensesOutputDirectory>
                            <errorRemedy>warn</errorRemedy>
                            <forceDownload>true</forceDownload>
                            <includeTransitiveDependencies>true</includeTransitiveDependencies>
                        </configuration>
                    </execution>
                    <execution>
                        <id>add-third-party</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>add-third-party</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/legal</outputDirectory>
                            <includeTransitiveDependencies>true</includeTransitiveDependencies>
                        </configuration>
                    </execution>
                    <execution>
                        <id>update-project-license</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>update-project-license</goal>
                        </goals>
                        <configuration>
                            <licenseName>bsd_2</licenseName>
                            <inceptionYear>2026</inceptionYear>
                            <organizationName>Gianmarco Carraretto</organizationName>
                            <projectName>Structured File Viewer</projectName>
                            <licenseFile>LICENSE.txt</licenseFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>${antlr.version}</version>
                <executions>
                    <execution>
                        <id>antlr</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                        <configuration>
                            <visitor>true</visitor>
                            <outputDirectory>${project.basedir}/target/generated-sources/antlr4/com/github/giamgiammi/StructuredFileViewer/filters/generated/</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.moditect</groupId>
                <artifactId>moditect-maven-plugin</artifactId>
                <version>1.3.0.Final</version>
                <executions>
                    <execution>
                        <id>add-module-infos</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>add-module-info</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
                            <overwriteExistingFiles>true</overwriteExistingFiles>
                            <modules>
                                <module>
                                    <artifact>
                                        <groupId>org.antlr</groupId>
                                        <artifactId>antlr4-runtime</artifactId>
                                        <version>${antlr.version}</version>
                                    </artifact>
                                    <moduleInfo></moduleInfo>
                                </module>
                            </modules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>force-modular</id>
            <dependencies>
                <dependency>
                    <groupId>org.antlr</groupId>
                    <artifactId>antlr4-runtime</artifactId>
                    <version>${antlr.version}</version>
                    <scope>system</scope>
                    <systemPath>${project.build.directory}/modules/antlr4-runtime-${antlr.version}.jar</systemPath>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
